--- a/Weitianshi/pages/bigData/projectLib/projectLib.wxml
+++ b/Weitianshi/pages/bigData/projectLib/projectLib.wxml
@@ -4,8 +4,53 @@
 <!--筛选  -->
 <template is='search' data='{{SearchInit,linkDataShow,currentTab,hidden:true}}'></template>
 <!--项目列表  -->
-<scroll-view id='projectLib' scroll-top='{{scrollTop}}'> 
-  
+<scroll-view id='projectLib' scroll-top='{{scrollTop}}'>
+  <block wx:for="{{sourceData.events_list.list}}" wx:key="{{index}}">
+    <view class='newProjectBox' data-id="{{item.project_id}}">
+      <view class="boxTop flex">
+        <image class="belongTo" src='/img/img-weitianshi@2x(1).png'></image>
+        <image class="npLeft" src='{{item.project_logo}}' wx:if="{{item.project_logo}}"></image>
+        <image class="npLeft" src='/img/img-logo@2x.png' wx:if="{{!item.project_logo}}"></image>
+        <view class="npRight">
+          <view class="npRightTitle">{{item.project_name}}</view>
+          <view class="npRightInfo">{{item.project_intro}}</view>
+          <view class="npRightOther flex">
+            <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:for-item='industryList'>
+              <label>{{industryList.industry_name}}
+                <label wx:if="{{index != item.industry_list.length-1}}">·
+                  <text decode="true" space="true">&nbsp;</text>
+                </label>
+              </label>
+            </block>
+          </view>
+        </view>
+      </view>
+      <view class="projectSpecial  flex">
+        <block wx:for="{{item.special_list}}" wx:key="{{index}}" wx:for-item='specialList'>
+          <view class="otherProjectBox">
+            <label class='otherProject'>{{specialList.special_name}}</label>
+          </view>
+        </block>
+      </view>
+      <block wx:for="{{item.events_list}}" wx:key="{{index}}" wx:for-item='eventList'>
+        <view class="boxBottom flex">
+          <view class="boxBottomLeft">
+            <view class="boxBottomTime">{{eventList.finance_time}}</view>
+            <view class="boxBottomScale">{{eventList.stage_name}}</view>
+          </view>
+          <image src="/img/img-dianx.png" class="boxDot"></image>
+          <view class="boxBottomRight">
+            <view class="boxBottomRightMoney">{{eventList.finance_money}}</view>
+            <block wx:for="{{eventList.investment_list}}" wx:key="{{index}}" wx:for-item='investList'>
+              <view class="boxBottomContent">{{investList.investment_name}}
+                <label wx:if="{{investList.project_lead}}">【{{investList.project_lead}}】</label>
+              </view>
+            </block>
+          </view>
+        </view>
+      </block>
+    </view>
+  </block>
 </scroll-view>
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
