--- a/Weitianshi/pages/bigData/projectLib/projectLib.wxss
+++ b/Weitianshi/pages/bigData/projectLib/projectLib.wxss
@@ -2,9 +2,11 @@
 @import '../index/index.wxss';
 page{
   height: 100%;
+  overflow: hidden;
 }
 scroll-view{
-  height: 1158rpx;
+  height: 1030rpx;
+  padding:12rpx 16rpx;
 }
 /*----------------筛选--------------------------------  */
 .search_icon{
