--- a/Weitianshi/pages/bigData/projectDetail/projectDetail.wxml
+++ b/Weitianshi/pages/bigData/projectDetail/projectDetail.wxml
@@ -1,7 +1,9 @@
 <scroll-view>
   <view class="projectDetailBox">
     <view class="flex projectDetailTop">
-      <image class="projectDetailLeft" src="{{projectInfo.info.project_logo}}"></image>
+      <image class="belongTo" src='/img/img-weitianshi@2x(1).png' wx:if="{{projectInfo.info.wts_project_id != 0}}"></image>
+      <image class="projectDetailLeft" src='/img/img-logo@2x.png' wx:if="{{!projectInfo.info.project_logo}}"></image>
+      <image class="projectDetailLeft" src="{{projectInfo.info.project_logo}}" wx:if="{{projectInfo.info.project_logo}}"></image>
       <view class="projectDetailRight">
         <view class="projectDetailTitle">{{projectInfo.info.project_name}}</view>
         <view class="projectDetailContent">{{projectInfo.info.project_intro}}</view>
@@ -11,14 +13,14 @@
       <view class="flex">
         <image class="t-roundGroupTitle" src="/img/icon-lunci@2x.png"></image>
         <view>
-          <!-- <block wx:for="{{item.user.industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
-          <label wx:if="{{index < item.user.industry.length-1}}">{{industryItem.industry_name}}、</label>
-          <label wx:if="{{index == item.user.industry.length-1}}">
-            {{industryItem.industry_name}}
-          </label>
-        </block> -->
+          <block wx:for="{{projectInfo.info.industry_list}}" wx:key="{{index}}" wx:for-item='industryItem'>
+            <label wx:if="{{index < projectInfo.info.industry_list.length-1}}">{{industryItem.industry_name}} / </label>
+            <label wx:if="{{index == projectInfo.info.industry_list.length-1}}">
+              {{industryItem.industry_name}}
+            </label>
+          </block>
         </view>
-        <view>暂未透露</view>
+        <view wx:if="{{projectInfo.info.industry_list.length == 0}}">暂未透露</view>
       </view>
       <view class="flex stageBox">
         <image class="t-roundGroupTitle" src="/img/icon-lingyu1@2x.png"></image>
@@ -111,81 +113,73 @@
       <view class="flex title">
         <view class="detailTitle">主要产品</view>
         <view class="allNumber">全部
-          <label>（12）</label>
+          <label>（{{projectInfo.product_list.total_num}}）</label>
         </view>
       </view>
-      <view class='flex mainProjectBox'>
-        <!-- <image></image> -->
-        <view class="projectImage"></view>
-        <view>
-          <view class="flex title">
-            <view class="littleTitle">蜂融网络</view>
-            <view class="detailType">类型</view>
+      <block wx:for="{{projectInfo.product_list.list}}" wx:key="{{index}}">
+        <view class='flex mainProjectBox'>
+          <image class="projectImage" src="{{item.product_logo}}" wx:if="{{item.product_logo}}"></image>
+          <image class="projectImage" src='/img/img-logo@2x.png' wx:if="{{!item.product_logo}}"></image>
+          <view>
+            <view class="flex title">
+              <view class="littleTitle">{{item.product_name}}</view>
+              <view class="detailType">{{item.product_type}}</view>
+            </view>
+            <view class="mainProject">{{item.product_introduce}}</view>
           </view>
-          <view class="mainProject">让信用变现的互联网产品让信用变现的互联网产品让信用变现的互联网产品</view>
         </view>
-      </view>
-      <view class='flex mainProjectBox'>
-        <!-- <image></image> -->
-        <view class="projectImage"></view>
-        <view>
-          <view class="flex title">
-            <view class="littleTitle">蜂融网络金融</view>
-            <view class="detailType">一个类型</view>
-          </view>
-          <view class="mainProject">让信用变现的互联网产品让信用变现的互联网产品让信用变现的互联网产品</view>
-        </view>
-      </view>
+      </block>
+
     </view>
     <!--历史融资  -->
-    <view class="companyHistory">
-      <view class="flex title">
-        <view class="detailTitle">历史融资</view>
-        <view class="allNumber">全部
+    <view class="companyHistory ">
+      <view class="flex title ">
+        <view class="detailTitle ">历史融资</view>
+        <view class="allNumber ">全部
           <label>（{{projectInfo.history_finance.total_num}}）</label>
         </view>
       </view>
-      <block wx:for="{{projectInfo.history_finance.list}}" wx:key="{{index}}">
-        <view class="historyBox flex">
-          <view class="left">
-            <view class="mainProjectTime">{{item.finance_time}}</view>
-            <view class="mainProjectScale">{{item.stage_name}}</view>
+      <block wx:for="{{projectInfo.history_finance.list}} " wx:key="{{index}} ">
+        <view class="historyBox flex ">
+          <view class="left ">
+            <view class="mainProjectTime ">{{item.finance_time}}</view>
+            <view class="mainProjectScale ">{{item.stage_name}}</view>
           </view>
-          <view class="right">
-            <view class="mainProjectMoney">{{item.finance_money}}</view>
-            <block wx:for="{{projectInfo.history_finance.list}}" wx:key="{{index}}" wx:for-item="investment">
-              <view class="mainProjectOther">{{investment.investment_name}}</view>
+          <view class="right ">
+            <view class="mainProjectMoney ">{{item.finance_money}}</view>
+            <block wx:for="{{projectInfo.history_finance.list}} " wx:key="{{index}} " wx:for-item="investment ">
+              <view class="mainProjectOther ">{{investment.investment_name}}</view>
             </block>
           </view>
         </view>
       </block>
     </view>
     <!--核心成员  -->
-    <view class="companyCorePerson">
-      <view class="flex title">
-        <view class="detailTitle">核心成员</view>
-        <view class="allNumber">全部
+    <view class="companyCorePerson ">
+      <view class="flex title ">
+        <view class="detailTitle ">核心成员</view>
+        <view class="allNumber ">全部
           <label>（{{projectInfo.member_list.total_num}}）</label>
         </view>
       </view>
-      <block wx:for="{{projectInfo.member_list.list}}" wx:key="{{index}}">
-        <view class="corePersonBox flex">
-          <image class="corePersonImage" src="{{item.member_avatar}}" wx:if="{{item.member_avatar}}"></image>
-          <view class="corePersonNoImage" wx:if="{{!item.member_avatar}}">{{item.member_avatar_text}}</view>
+      <block wx:for="{{projectInfo.member_list.list}} " wx:key="{{index}} ">
+        <view class="corePersonBox flex ">
+          <image class="corePersonImage " src="{{item.member_avatar}} " wx:if="{{item.member_avatar}} "></image>
+          <view class="corePersonNoImage " wx:if="{{!item.member_avatar}} ">{{item.member_avatar_text}}</view>
           <view>
-            <view class="corePersonInfo flex">
+            <view class="corePersonInfo flex ">
               <view class='corePersonName'>{{item.member_name}}</view>
               <view class='corePersonPosition'>{{item.member_position}}</view>
             </view>
             <view class='flex corePersonPercent title'>
               <view>持股比例:
-                <label class="realPercent">{{item.hold_rate}}</label>
+                <label class="realPercent ">{{item.hold_rate}}</label>
               </view>
               <view>拥有公司:
-                <label class="realPercent">{{item.company_num}}家</label>
+                <label class="realPercent ">{{item.company_num}}家</label>
               </view>
             </view>
-            <view class="corePersonIntro">
+            <view class="corePersonIntro ">
               {{item.member_introduce}}
             </view>
           </view>
@@ -194,71 +188,71 @@
     </view>
     <!--里程碑  -->
     <view class='companyStone'>
-      <view class="flex title">
-        <view class="detailTitle">里程碑</view>
-        <view class="allNumber">全部
+      <view class="flex title ">
+        <view class="detailTitle ">里程碑</view>
+        <view class="allNumber ">全部
           <label>（{{projectInfo.milestone_list.total_num}}）</label>
         </view>
       </view>
-      <block wx:for="{{projectInfo.milestone_list.list}}" wx:key="{{index}}">
-        <view class="companyStoneBox flex">
-          <view class="left">{{item.milestone_time}}</view>
-          <view class="right">{{item.milestone_event}}</view>
+      <block wx:for="{{projectInfo.milestone_list.list}} " wx:key="{{index}} ">
+        <view class="companyStoneBox flex ">
+          <view class="left ">{{item.milestone_time}}</view>
+          <view class="right ">{{item.milestone_event}}</view>
         </view>
       </block>
     </view>
     <!--相似项目  -->
     <view class='similarProject'>
-      <view class="flex title">
-        <view class="detailTitle">相似项目</view>
-        <view class="allNumber">全部
+      <view class="flex title ">
+        <view class="detailTitle ">相似项目</view>
+        <view class="allNumber ">全部
           <label>（12）</label>
         </view>
       </view>
-      <view class="similarProjectBox flex">
+      <view class="similarProjectBox flex ">
         <!-- <image></image> -->
-        <view class="similarPic"></view>
+        <view class="similarPic "></view>
         <view>
-          <view class="flex">
-            <view class="similarProjectInro">这里是项目的名称,足底啊120px</view>
-            <view class="similarScale">A轮</view>
+          <view class="flex ">
+            <view class="similarProjectInro ">这里是项目的名称,足底啊120px</view>
+            <view class="similarScale ">A轮</view>
           </view>
-          <view class="similarInro">这里是机构的介绍，就显示一行最大宽度279超过...</view>
-          <view class="similarMain">无人零售 · 人脸识别 · 大数据</view>
-          <view class="projectSpecial flex">
-            <view class="otherProjectBox">
+          <view class="similarInro ">这里是机构的介绍，就显示一行最大宽度279超过...</view>
+          <view class="similarMain ">无人零售 · 人脸识别 · 大数据</view>
+          <view class="projectSpecial flex ">
+            <view class="otherProjectBox ">
               <label class='otherProject'>项目的特色标签</label>
             </view>
-            <view class="otherProjectBox">
+            <view class="otherProjectBox ">
               <label class='otherProject'>项目的特色标签</label>
             </view>
-            <view class="otherProjectBox">
+            <view class="otherProjectBox ">
               <label class='otherProject'>项目的特色标签</label>
             </view>
-            <view class="otherProjectBox">
+            <view class="otherProjectBox ">
               <label class='otherProject'>项目的特色标签</label>
             </view>
-            <view class="otherProjectBox">
+            <view class="otherProjectBox ">
               <label class='otherProject'>项目的特色标签</label>
             </view>
           </view>
         </view>
       </view>
-      <view class="similarProjectBox flex">
+      <view class="similarProjectBox flex ">
         <!-- <image></image> -->
-        <view class="similarPic"></view>
+        <view class="similarPic "></view>
         <view>
-          <view class="flex">
-            <view class="similarProjectInro">这里是项目的名称,足底啊120px</view>
-            <view class="similarScale">A轮</view>
+          <view class="flex ">
+            <view class="similarProjectInro ">这里是项目的名称,足底啊120px</view>
+            <view class="similarScale ">A轮</view>
           </view>
-          <view class="similarInro">这里是机构的介绍，就显示一行最大宽度279超过...</view>
-          <view class="similarMain">无人零售 · 人脸识别 · 大数据</view>
-          <view class="projectSpecial flex">
-            <view class="otherProjectBox">
+          <view class="similarInro ">这里是机构的介绍，就显示一行最大宽度279超过...</view>
+          <view class="similarMain ">无人零售 · 人脸识别 · 大数据</view>
+          <view class="projectSpecial flex ">
+            <view class="otherProjectBox ">
               <label class='otherProject'>项目的特色标签</label>
             </view>
-            <view class="otherProjectBox">
+            <view class="otherProjectBox ">
               <label class='otherProject'>项目的特色标签</label>
             </view>
           </view>
@@ -267,41 +261,41 @@
     </view>
     <!--媒体报道  -->
     <view class='mediaReport'>
-      <view class="flex title">
-        <view class="detailTitle">媒体报道</view>
-        <view class="allNumber">全部
+      <view class="flex title ">
+        <view class="detailTitle ">媒体报道</view>
+        <view class="allNumber ">全部
           <label>（12）</label>
         </view>
       </view>
-      <view class="mediaReportBox">
-        <view class="mediaReportTime">2017-07-07</view>
-        <view class="mediaReportContent">这里是新闻的标题，最多久显示两行，比如张淡淡的说昨天签署了一份协议</view>
+      <view class="mediaReportBox ">
+        <view class="mediaReportTime ">2017-07-07</view>
+        <view class="mediaReportContent ">这里是新闻的标题，最多久显示两行，比如张淡淡的说昨天签署了一份协议</view>
         <view class='mediaReportFrom'>人工智能 · 36氪</view>
       </view>
-      <view class="mediaReportBox">
-        <view class="mediaReportTime">2017-07-07</view>
-        <view class="mediaReportContent">这里是新闻的标题，最多久显示两行，比如张淡淡的说昨天签署了一份协议</view>
+      <view class="mediaReportBox ">
+        <view class="mediaReportTime ">2017-07-07</view>
+        <view class="mediaReportContent ">这里是新闻的标题，最多久显示两行，比如张淡淡的说昨天签署了一份协议</view>
         <view class='mediaReportFrom'>人工智能 · 36氪</view>
       </view>
     </view>
   </view>
   <view style='height:104rpx;'></view>
-  <view class="flex t-aboutNetwork">
-    <view class="t-flexBox1" hover-class="t-hoverColor" bindtap="moreProject">
-      <image src='/img/icon-shouye@2x.png' class="t-shopPic1"></image>
+  <view class="flex t-aboutNetwork ">
+    <view class="t-flexBox1 " hover-class="t-hoverColor " bindtap="moreProject ">
+      <image src='/img/icon-shouye@2x.png' class="t-shopPic1 "></image>
       <view class='t-shopBlock'>首页</view>
     </view>
-    <view class="t-line"></view>
-    <view class="t-flexBox1" hover-class="t-hoverColor">
-      <image src='/img/icon-fenxiang@2x.png' class="t-shopPic1"></image>
-      <button class='t-shopBlock' open-type="share">收藏</button>
+    <view class="t-line "></view>
+    <view class="t-flexBox1 " hover-class="t-hoverColor ">
+      <image src='/img/icon-fenxiang@2x.png' class="t-shopPic1 "></image>
+      <button class='t-shopBlock' open-type="share ">收藏</button>
     </view>
-    <view class="t-line"></view>
-    <view class="t-flexBox1" catchtap="businessBook" hover-class="t-hoverColor">
-      <image src='/img/icon-jihuashu@2x.png' class="t-shopPic1"></image>
+    <view class="t-line "></view>
+    <view class="t-flexBox1 " catchtap="businessBook " hover-class="t-hoverColor ">
+      <image src='/img/icon-jihuashu@2x.png' class="t-shopPic1 "></image>
       <view class='t-shopBlock'>商业计划书</view>
     </view>
-    <view class="t-line"></view>
-    <view class='t-creatProject' catchtap="contactPerson" hover-class="t-redColor">联系项目方</view>
+    <view class="t-line "></view>
+    <view class='t-creatProject' catchtap="contactPerson " hover-class="t-redColor ">联系项目方</view>
   </view>
 </scroll-view>
