--- a/Weitianshi/pages/bigData/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/bigData/projectDetail/projectDetail.wxss
@@ -5,12 +5,20 @@
 
 .projectDetailTop {
   margin-bottom: 32rpx;
+  position: relative;
+}
+
+.belongTo {
+  position: absolute;
+  top: -16rpx;
+  left: -18rpx;
+  width: 116rpx;
+  height: 36rpx;
 }
 
 .projectDetailLeft {
   width: 104rpx;
   height: 104rpx;
-  background: yellow;
   margin-right: 24rpx;
   margin-bottom: 8rpx;
 }
@@ -125,7 +133,6 @@
   padding-bottom: 0;
   margin-bottom: 32rpx;
 }
-
 
 .companyName {
   font-size: 30rpx;
@@ -273,7 +280,6 @@
   height: 104rpx;
   width: 104rpx;
   margin-right: 32rpx;
-  background: blue;
 }
 
 .detailType, .similarScale {
